--- a/researchcn.html
+++ b/researchcn.html
@@ -103,13 +103,23 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（85）</span></h1> SCI总影响因子=232.4，其中一作/通讯总影响因子=197.6</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（87）</span></h1> SCI总影响因子=232.4，其中一作/通讯总影响因子=197.6</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
 					<img src="images/Book.png" height="15">&nbsp;&nbsp;|&nbsp;&nbsp;<img src="images/Dissertation.png" height="15">&nbsp;&nbsp;
-					<img src="images/4.png" height="15">
+					<img src="images/5.png" height="15">
 				</td></tr>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Biomedical Engineering Systems and Technologies.</i> Liu, H. et al. (2025). Springer Nature Switzerland.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</td></tr>
+				-->
 				<tr><td>
 					<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (2025). MDPI.<br>
 					<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+II+Hui+Liu" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -149,11 +159,11 @@
 			
 				<tr><td>
 					<img src="images/Chapter.png" height="15">&nbsp;&nbsp;
-					<img src="images/3.png" height="15">
+					<img src="images/4.png" height="15">
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
+					<i>EMG-based Action Unit Recognition of Subtle and Intense Expressions: Towards Single-Trial Classification Models.</i> Küster, D.*, Rammonhan, R. A., Liu, H., Schultz, T., Koschke, R. (2026). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -163,7 +173,17 @@
 				-->
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
+					<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</td></tr>
+				-->
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -278,17 +298,6 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
-					<a href="https://scholar.google.com/scholar?q=Integrated+Neural+Network+Framework+for+Multi-Object+Detection+and+Recognition+Using+UAV+Imagery" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					-->
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1643011</a>
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -298,6 +307,14 @@
 					-->
 				</td></tr>
 			
+				<tr><td>
+					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<a href="https://scholar.google.com/scholar?q=Integrated+Neural+Network+Framework+for+Multi-Object+Detection+and+Recognition+Using+UAV+Imagery" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Integrated-neural-network-framework-for-detection-Alshehri-Xue/2b0e0abfce197f662ff657f571967303558a950f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/394102368_Integrated_neural_network_framework_for_multi-object_detection_and_recognition_using_UAV_imagery" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1643011" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1643011</a>
+				</td></tr>
 				<tr><td>
 					<i>ANN-Assisted Optimization of a Solar-to-X System for Green Hydrogen Production, CO₂ Capture, and Methanol-Based Energy Storage.</i> Liu, H.*, Liu, W., Wu, Y., Du, Z., Xue, T., Manesh A. M., Xu, J*, and Jiang, T.* (2025). Energy, 333:137350. Elsevier. ISSN: 0360-5442.<br>
 					<a href="https://scholar.google.com/scholar?q=ANN-Assisted+Optimization+of+a+Solar-to-X+System+for+Green+Hydrogen+Production%2C+CO2+Capture%2C+and+Methanol-Based+Energy+Storage" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -316,21 +333,16 @@
 				</td></tr>
 				<tr><td>
 					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
-					-->
-					<a href="https://www.researchgate.net/publication/393667197_A_Hybrid_Deep_Learning_Pipeline_for_Wearable_Sensors-Based_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=A+Hybrid+Deep+Learning+Pipeline+for+Wearable+Sensors-based+Human+Activity+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Hybrid-Deep-Learning-Pipeline-for-Wearable-Human-Algarni-Aijaz/0ea22b20f494c1cb281278eefe4f0f23f27ebd3a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393667197_A_Hybrid_Deep_Learning_Pipeline_for_Wearable_Sensors-Based_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/23774" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.064601" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.064601</a>
 				</td></tr>
 				<tr><td>
 					<i>A Novel Multi-Modal Rehabilitation Monitoring Over Human Motion Intention Recognition.</i> Kamal, S., Alshehri, M., Alqahtani, Y., Alshahrani, A., Almujally, N., Jalal, A.*, Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1568690. ISSN: 2296-4185.<br>
 					<a href="https://scholar.google.com/scholar?q=A+Novel+Multi-Modal+Rehabilitation+Monitoring+Over+Human+Motion+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-novel-multi-modal-rehabilitation-monitoring-over-Kamal-Alshehri/9fdbdf8f625447d74de4dd33a4693feca6794ed0" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393775118_A_novel_multi-modal_rehabilitation_monitoring_over_human_motion_intention_recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1568690" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1568690</a>
@@ -338,9 +350,7 @@
 				<tr><td>
 					<i>Intelligent Biosensors for Human Movement Rehabilitation and Intention Recognition.</i> Rafiq, M., Almujally, N., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1558529. ISSN: 2296-4185.<br>
 					<a href=https://scholar.google.com/scholar?q=Intelligent+Biosensors+for+Human+Movement+Rehabilitation+and+Intention+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Intelligent-biosensors-for-human-movement-and-Rafiq-Almujally/a59b0c596eb401f22ecc53c0d519d1c67d0680f4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393557563_Intelligent_biosensors_for_human_movement_rehabilitation_and_intention_recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1558529" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1558529</a>
