--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (87)</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (88)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -205,7 +205,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/5.png" height="15"><img src="images/5.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/5.png" height="15"><img src="images/6.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -283,6 +283,17 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Multimodal Intelligent Biosensing for Life Assistance Monitoring and Intension Recognition.</i> Khan, D., Alhasson, H. F., Abdelhaq, M, Alsaqour. R., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
+					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensing+for+Life+Assistance+Monitoring+and+Intension+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1543688</a>
+				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alshehri, M., Alqahtani, Y, Aljuaid, H., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
