--- a/publications.html
+++ b/publications.html
@@ -25,17 +25,18 @@
 		<img src="images/5.png" height="15">
 	</td></tr>
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Biomedical Engineering Systems and Technologies.</i> Liu, H. et al. (2025). Springer Nature Switzerland.<br>
+		<i>Biomedical Engineering Systems and Technologies.</i>  Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2025). Springer Nature Switzerland.<br>
+		<a href="https://www.springerprofessional.de/biomedical-engineering-systems-and-technologies/51405216" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0</a>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
 	</td></tr>
-	-->
 	<tr><td>
-		<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (2025). MDPI.<br>
+		<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (eds., 2025). MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+II+Hui+Liu" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-II/dp/3725828032" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388523690_Sensors_for_Human_Activity_Recognition_II" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -43,14 +44,14 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/books978-3-7258-2804-3" target="_blank" rel="noopener noreferrer">10.3390/books978-3-7258-2804-3</a>
 	</td></tr>
 	<tr><td>
-		<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (2024). INSTICC.<br>
+		<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2024). INSTICC.<br>
 		<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer">10.5220/0000184700003657</a>
 	</td></tr>
 	<tr><td>
-		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
+		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (eds., 2023). MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+Hui+Liu" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.google.de/books/edition/Sensors_for_Human_Activity_Recognition/jTID0AEACAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition/dp/3036575545" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
@@ -83,28 +84,34 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
 	</td></tr>
-	-->
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		-->
+		<a href="https://www.researchgate.net/publication/395117308_Muscle_Synergy_and_Co-contraction_Effects_on_Joystick_Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/muscle-synergy-and-co-contraction-effects-on-joystick-manipulati/51405238" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_16</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 	</td></tr>
-	-->
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		-->
+		<a href="https://www.researchgate.net/publication/395118095_EMG-Based_Action_Unit_Recognition_Feature_Engineering_Machine_Learning_and_Real-Time_Classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/emg-based-action-unit-recognition-feature-engineering-machine-le/51405266" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_3</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 	</td></tr>
-	-->
 	<tr><td>
 		<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y.*, Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
 		<a href="https://scholar.google.com/scholar?q=High-Level+Features+for+Human+Activity+Recognition+and+Modeling" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
