--- a/enkas/こ.html
+++ b/enkas/こ.html
@@ -9,6 +9,7 @@
 <h2>
 こ<br><br>
 <a href="#こんなベッピン見たことない">こんなベッピン見たことない</a><br>
+<a href="#好運が来たら">好運が来たら</a><br>
 <a href="#子連れ狼">子連れ狼</a><br>
 <a href="#心の旅">心の旅</a><br>
 <a href="#心の糸">心の糸</a><br>
@@ -59,6 +60,14 @@
 アラ　どうしましょう　どうしましょう<br>
 ホーニ　ホニホニホニ　浮いてきた　（ソラネ）<br>
 ホーニ　ホニホニホニ　浮いてきた<br>
+</h1><br><h3><a href="#こ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="好運が来たら">【好運が来たら】</a>D1-E2<br>
+<br>
+１ 好運が来たら　好運が来たください<br>
+好運は喜びと愛をたらします<br>
+運がいいです　私たちは運がいいです<br>
+好運に向かって繫栄し　世界に通じでいる<br>
 </h1><br><h3><a href="#こ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="子連れ狼">【子連れ狼】</a>D1-A2<br>
