--- a/enkas/は.html
+++ b/enkas/は.html
@@ -12,6 +12,7 @@
 <a href="#ハイサイおじさん">ハイサイおじさん</a><br>
 <a href="#ハナミズキ">ハナミズキ</a><br>
 <a href="#バラ色の人生">バラ色の人生</a><br>
+<a href="#八路軍はボルトを引いて">八路軍はボルトを引いて</a><br>
 <a href="#埴生の宿">埴生の宿</a><br>
 <a href="#春が来た">春が来た</a><br>
 <a href="#春夏秋冬自惚れちゃって">春夏秋冬自惚れちゃって</a><br>
@@ -176,6 +177,27 @@
 私の胸に　幸の影が　ある日さしたの<br>
 あなたゆえの私よ　私ゆえのあなたなの<br>
 あなたに逢うと　私の胸ときめく<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="八路軍はボルトを引いて">【八路軍はボルトを引いて】</a>A1-D3<br>
+<br>
+一九三七年<br>
+<ruby><rb>鬼畜</rb><rt>きちく</rt></ruby>が<ruby><rb>中原</rb><rt>ちゅうげん</rt></ruby>へ<br>
+<ruby><rb>盧溝橋</rb><rt>ろこうきょう</rt></ruby>に次いで<br>
+<ruby><rb>山海関</rb><rt>さんかいかん</rt></ruby>破れ<br>
+<ruby><rb>強盗</rb><rt>ごうとう</rt></ruby><ruby><rb>殺戮</rb><rt>さつりく</rt></ruby><ruby><rb>済</rb><rt>さい</rt></ruby>南まで<br>
+<br>
+<ruby><rb>鬼子</rb><rt>グイズ</rt></ruby><ruby><rb>砲弾</rb><rt>たま</rt></ruby>飛ばして<br>
+<ruby><rb>八路軍</rb><rt>はちろぐん</rt></ruby>はボルトを引いて<br>
+<ruby><rb>的</rb><rt>まと</rt></ruby>を<ruby><rb>定</rb><rt>さだ</rt></ruby>め<br>
+一匹倒して<br>
+<ruby><rb>奴</rb><rt>やつ</rt></ruby>バタッとくたばっていたね<br>
+<br>
+<ruby><rb>鬼子</rb><rt>グイズ</rt></ruby><ruby><rb>砲弾</rb><rt>たま</rt></ruby>飛ばして<br>
+<ruby><rb>八路軍</rb><rt>はちろぐん</rt></ruby>はボルトを引いて<br>
+<ruby><rb>的</rb><rt>まと</rt></ruby>を<ruby><rb>定</rb><rt>さだ</rt></ruby>め<br>
+通訳者も倒して<br>
+足バタッとあの世逝っていたね<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="埴生の宿">【埴生の宿】</a>C1-C2<br>
