--- a/publications.html
+++ b/publications.html
@@ -88,12 +88,11 @@
 	</td></tr>
 	<tr><td>
 		<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
+		<a href="https://scholar.google.com/scholar?q=Muscle+Synergy+and+Co-Contraction+Effects+on+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
 		-->
-		<a href="https://www.researchgate.net/publication/395117308_Muscle_Synergy_and_Co-contraction_Effects_on_Joystick_Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395117308_Muscle_Synergy_and_Co-contraction_Effects_on_Joystick_Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/muscle-synergy-and-co-contraction-effects-on-joystick-manipulati/51405238" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_16</a>
@@ -101,12 +100,11 @@
 	</td></tr>
 	<tr><td>
 		<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
+		<a href="https://scholar.google.com/scholar?q=EMG-Based+Action+Unit+Recognition%3A+Feature+Engineering%2C+Machine+Learning%2C+and+Real-Time+Classification" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
 		-->
-		<a href="https://www.researchgate.net/publication/395118095_EMG-Based_Action_Unit_Recognition_Feature_Engineering_Machine_Learning_and_Real-Time_Classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395118095_EMG-Based_Action_Unit_Recognition_Feature_Engineering_Machine_Learning_and_Real-Time_Classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/emg-based-action-unit-recognition-feature-engineering-machine-le/51405266" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_3</a>
