--- a/researchcn.html
+++ b/researchcn.html
@@ -103,7 +103,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（88）</span></h1> SCI总影响因子=235.2，其中一作/通讯总影响因子=200.4</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（95）</span></h1> SCI总影响因子=235.2，其中一作/通讯总影响因子=200.4</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -123,7 +123,7 @@
 				</td></tr>
 				<tr><td>
 					<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (eds., 2025). MDPI.<br>
-					<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+II+Hui+Liu" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Buch+Sensors+for+Human+Activity+Recognition+II+Liu+Gamboa" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-II/dp/3725828032" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388523690_Sensors_for_Human_Activity_Recognition_II" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/10390" target="_blank" rel="noopener noreferrer"><img src="images/MDPIBooks.svg" height="15"></a>
@@ -292,7 +292,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
 					<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -695,14 +695,14 @@
 			
 				<tr><td>
 					<img src="images/Conference.png" height="15">&nbsp;&nbsp;
-					<img src="images/2.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/3.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 				</td></tr>
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Review of Wearable Detectors for Toxic Environments: Devices, Mechanisms, Integration, and Application Scenarios.</i> Peter Mweetwa, Ezzegraoui Chorouk, Hui Liu*, Yanfeng Wu, Xiaofeng Zhao4, Yiqian Xu4, Xuhao Yan4 <br>
+					<i>A Review of Wearable Detectors for Toxic Environments: Devices, Mechanisms, Integration, and Application Scenarios.</i> Mweetwa, P., Chorouk, E., Liu, H.*, Wu, Y., Zhao, X., Xu, Y., and Yan, X. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -713,7 +713,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>Real-Time Fault Detection in Power Systems Using Custom Anomaly Detection.</i> Li, Y., Liu, H.*, Kogoya, K., Hossain, J., Awasthi, L., Shi, J., Qin, C., Wu, Y., and Hu, B. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -724,7 +724,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>Signal-Driven Fault Detection in Electrical Systems via Adaptive Machine Learning.</i> Li, Y., Liu, H.*, Kogoya, K., Hossain, J., Awasthi, L., Shi, J., Qin, C., Wu, Y., and Hu, B. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -735,7 +735,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>Fault Detection in Power Systems Using Convolutional Neural Networks: A Review of Voltage and Current Data Visualization Techniques.</i> Hossain, J., Islam, T., Liu, H.*, Shi, J., Wu, Y., Qin, C., and Hu, B. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -746,7 +746,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>Time Series vs. Statistial Methods for Small Current Fault Detection: A Comparative Review of Accuracy and Efficiency.</i> Danso, E. O. A., Kawushini, R. P. R., Cabrel, T. P. U., Liu, H.*, Qin, C., Shi, J., Wu, Y., and Hu, B. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -757,7 +757,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>Exploring Time-Series Machine Learning for Voltage Prediction in Air Conditioning Systems.</i> Alam, M. N., Liu, H.*, Hossain, J., Markos, T. E., Shi, J., Wu, Y. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -768,7 +768,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>.</i> <br>
+					<i>A Review on Wearable Proximity Sensing Technologies for Live Electrical Object Detection.</i> Khalil, B., Abraham, M., Liu, H.*, Wu, Y., Zhao, X., Xu, Y., and Yan, X. (2025). Taihu Forum on New Power Systems.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -778,7 +778,7 @@
 				</td></tr>
 			
 				<tr><td>
-					<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages 100-110. INSTICC, SciTePress.<br>
+					<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., and Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages 100-110. INSTICC, SciTePress.<br>
 					<img src="images/Highly.png" height="15" class = "pop1"> &nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="https://scholar.google.com/scholar?q=The+Bigger+the+Better%3F+Towards+EMG-Based+Single-Trial+Action+Unit+Recognition+of+Subtle+Expressions." target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/The-Bigger-the-Better-Towards-EMG-Based-Action-Unit-K%C3%BCster-Rammohan/4300ad9ff748225e3c69c01a1d16f6570a4afe0f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -867,7 +867,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012577300003657" target="_blank" rel="noopener noreferrer">10.5220/0012577300003657</a>
 				</td></tr>
 				<tr><td>
-					<i>Associating Endpoint Accuracy and Similarity of Muscle Synergies.</i> Cai, L., Yan, S., Ouyang, C., Zhang, T., Zhu, J., Chen, L., and Liu, H. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 683-694. INSTICC, SciTePress.<br>
+					<i>Associating Endpoint Accuracy and Similarity of Muscle Synergies.</i> Cai, L., Yan, S., Ouyang, C., Zhang, T., Zhu, J., Chen, L.*, and Liu, H.* (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 683-694. INSTICC, SciTePress.<br>
 					<a href="https://scholar.google.com/scholar?q=Associating+endpoint+accuracy+and+similarity+of+muscle+synergies" target=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Associating-Endpoint-Accuracy-and-Similarity-of-Cai-Yan/d804bfcbe0ef878941783c72f1d7113b00e427f8"_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378484411_Associating_Endpoint_Accuracy_and_Similarity_of_Muscle_Synergies" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -915,7 +915,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0010896400003123" target="_blank" rel="noopener noreferrer">10.5220/0010896400003123</a>
 				</td></tr>
 				<tr><td>
-					<i>Hidden Markov Model and Its Application in Human Activity Recognition and Fall Detection: A Review.</i> Xue, T., and Liu, H. (2022). Communications, Signal Processing, and Systems. Springer, Singapore.<br>
+					<i>Hidden Markov Model and Its Application in Human Activity Recognition and Fall Detection: A Review.</i> Xue, T.*, and Liu, H. (2022). Communications, Signal Processing, and Systems. Springer, Singapore.<br>
 					<a href="https://scholar.google.com/scholar?q=Hidden+Markov+Model+and+Its+Application+in+Human+Activity+Recognition+and+Fall+Detection%3A+A+Review" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Hidden-Markov-Model-and-Its-Application-in-Human-A-Xue-Liu/b37df2bc1532b776845dd48e4fa034c47a3dc39c" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/355198894_Hidden_Markov_Model_and_Its_Application_in_Human_Activity_Recognition_and_Fall_Detection_A_Review" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
