--- a/researchcn.html
+++ b/researchcn.html
@@ -1017,6 +1017,12 @@
 					</td>
 				</tr>
 				<tr>
+					<td align="center">学术会议执行主席（EC）</td>
+					<td>
+						&#9679; <a href="https://imic.nuist.edu.cn/xsjl/aim2025.htm" target="_blank" rel="noopener noreferrer">AIM</a> 2025 – International Symposium on AI in Medicine, 中国南京
+					</td>
+				</tr>
+				<tr>
 					<td align="center">学术会议技术委员会主席 (TPC)</td>
 					<td>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国南宁
