--- a/research.html
+++ b/research.html
@@ -1015,6 +1015,12 @@
 					</td>
 				</tr>
 				<tr>
+					<td align="center">Executive Chair（EC）</td>
+					<td>
+						&#9679; <a href="https://imic.nuist.edu.cn/xsjl/aim2025.htm" target="_blank" rel="noopener noreferrer">AIM</a> 2025 – International Symposium on AI in Medicine, Nanjing
+					</td>
+				</tr>
+				<tr>
 					<td align="center">Technical Program Chair (TPC)</td>
 					<td>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Nanning
