--- a/publications.html
+++ b/publications.html
@@ -26,19 +26,22 @@
 	</td></tr>
 	<tr><td>
 		<i>Biomedical Engineering Systems and Technologies.</i>  Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2025). Springer Nature Switzerland.<br>
-		<a href="https://www.springerprofessional.de/biomedical-engineering-systems-and-technologies/51405216" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		<a href="https://books.google.de/books?id=7HmCEQAAQBAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Biomedical-Engineering-Systems-Technologies-International/dp/3031968980" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395173234_Biomedical_Engineering_Systems_and_Technologies_17th_International_Joint_Conference_BIOSTEC_2024_Rome_Italy_February_21-23_2024_Revised_Selected_Papers" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/biomedical-engineering-systems-and-technologies/51405216" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0</a>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		-->
 	</td></tr>
 	<tr><td>
 		<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (eds., 2025). MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Buch+Sensors+for+Human+Activity+Recognition+II+Liu+Gamboa" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://books.google.de/books?id=byYX0QEACAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-II/dp/3725828032" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Sensors-for-Human-Activity-Recognition-II/df15938ca60997c41a628f926b1d88e637f8f663" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388523690_Sensors_for_Human_Activity_Recognition_II" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/10390" target="_blank" rel="noopener noreferrer"><img src="images/MDPIBooks.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/books978-3-7258-2804-3" target="_blank" rel="noopener noreferrer">10.3390/books978-3-7258-2804-3</a>
@@ -46,6 +49,7 @@
 	<tr><td>
 		<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2024). INSTICC.<br>
 		<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer">10.5220/0000184700003657</a>
@@ -717,7 +721,7 @@
 		<a href="https://scholar.google.com/scholar?q=Merged+Pitch+Histograms+and+Pitch-Duration+Histograms" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Merged-Pitch-Histograms-and-Pitch-duration-Liu-Xue/1e4d841d8e492c2bad6a28b9f7275f5c1f64dd12" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/362055213_Merged_Pitch_Histograms_and_Pitch-duration_Histograms" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.scitepress.org/Link.aspx?doi=10.5220/0007398800470055" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.scitepress.org/Link.aspx?doi=10.5220/0011310300003289" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0011310300003289" target="_blank" rel="noopener noreferrer">10.5220/0011310300003289</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<b>(Best Paper Award Finalist)</b>
 	</td></tr>
