--- a/publications.html
+++ b/publications.html
@@ -231,7 +231,7 @@
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>SiWformer: Multi-Scale Feature Fusion via Discrete Wavelet Transformand Vision Transformer.</i> Jalal, A.*, and Liu, H.* (2025). Signal, Image and Video Processing. Springer Nature. ISSN: 1863-1711.<br>
+		<i>SiWformer: Multi-Scale Feature Fusion via Discrete Wavelet Transformand Vision Transformer.</i> Ahmed, M. W., Wu, Y., Almujally, N. A., Alhasson, H. F., Alharbi, S. S., Jalal, A.*, and Liu, H.* (co-first) (2025). Signal, Image and Video Processing. Springer Nature. ISSN: 1863-1711.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -241,7 +241,7 @@
 	</td></tr>
 
 	<tr><td>
-		<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+		<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
 		<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
