--- a/researchcn.html
+++ b/researchcn.html
@@ -104,7 +104,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（97）</span></h1> SCI总影响因子=242.1，其中一作/通讯总影响因子=207.3</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（99）</span></h1> SCI总影响因子=243.8，其中一作/通讯总影响因子=209.0</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -217,7 +217,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/5.png" height="15"><img src="images/8.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/5.png" height="15"><img src="images/9.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -297,9 +297,9 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<i>Intelligent Human Interaction Recognition with Multi-Modal Feature Extraction and Bidirectional LSTM.</i> Azhar, M. H., Wu, Y., Almujally, N. A., Alharbi S. S., Algarni, A., Jalal, A.*, and Liu, H.* (co-first) (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+						<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
@@ -307,11 +307,11 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Deep Multimodal Biomechanical Analysis for Lower Back Pain Rehabilitation to Improve Patients Stability.</i> Ashraf, A., Wu, Y., Najam, S., Alshehri, M., Alqahtani, Y., Aljuaid, H., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1631910. ISSN: 2296-4185.<br>
-					<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910/abstract" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					<i>Deep Multimodal Biomechanical Analysis for Lower Back Pain Rehabilitation to Improve Patients Stability.</i> Ashraf, A., Wu, Y., Najam, S., Alshehri, M., Alqahtani, Y., Aljuaid, H., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Bioengineering and Biotechnology, 13:1631910. ISSN: 2296-4185.<br>
+					<a href="https://scholar.google.com/scholar?q=Deep+Multimodal+Biomechanical+Analysis+for+Lower+Back+Pain+Rehabilitation+to+Improve+Patients+Stability" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1631910/abstract" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1631910" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1631910</a>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					-->
@@ -326,13 +326,21 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
-			
 				<tr><td>
-					<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
-					<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<i>Aerial Images for Intelligent Vehicle Detection and Classification via YOLOv11 and Deep Learner.</i> Mujtaba, G., Liu, W., Alshehri, M., AlQahtani, Y., Almujally, N. A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					<a href="https://scholar.google.com/scholar?q=Aerial+Images+for+Intelligent+Vehicle+Detection+and+Classification+via+YOLOv11+and+Deep+Learner" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+						-->
+					<a href="https://www.semanticscholar.org/paper/Aerial-Images-for-Intelligent-Vehicle-Detection-and-Mujtaba-Liu/331f9796928eb3093f64ec5622ef3c1d06af89d4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/396723505_Aerial_Images_for_Intelligent_Vehicle_Detection_and_Classification_via_YOLOv11_and_Deep_Learner" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/24640" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.067895" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.067895</a>
+				</td></tr>
+				<tr><td>
+					<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics, 19:1681341. ISSN: 1662-5218.<br>
+					<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/UAV-based-intelligent-traffic-surveillance-using-Alshehri-Wu/95c6d0a8151640c0e1dfcf1740b65dca2b303938" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/396446978_UAV-based_intelligent_traffic_surveillance_using_recurrent_neural_networks_and_Swin_transformer_for_dynamic_environments" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1681341</a>
@@ -346,7 +354,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.137350" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.137350</a>
 				</td></tr>
 				<tr><td>
-					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<i>Integrated Neural Network Framework for Multi-Object Detection and Recognition Using UAV Imagery.</i> Alshehri, M., Xue, T., Mujtaba, G., Alqahtani, Y., Almujally, N., Jalal, A.*, and Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
 					<a href="https://scholar.google.com/scholar?q=Integrated+Neural+Network+Framework+for+Multi-Object+Detection+and+Recognition+Using+UAV+Imagery" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Integrated-neural-network-framework-for-detection-Alshehri-Xue/2b0e0abfce197f662ff657f571967303558a950f" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/394102368_Integrated_neural_network_framework_for_multi-object_detection_and_recognition_using_UAV_imagery" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -362,7 +370,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.buildenv.2025.113290" target="_blank" rel="noopener noreferrer">10.1016/j.buildenv.2025.113290</a>
 				</td></tr>
 				<tr><td>
-					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
+					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continua, 84(3):5879-5896. Tech Science Press. ISSN: 1546-2218.<br>
 					<a href="https://scholar.google.com/scholar?q=A+Hybrid+Deep+Learning+Pipeline+for+Wearable+Sensors-based+Human+Activity+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Hybrid-Deep-Learning-Pipeline-for-Wearable-Human-Algarni-Aijaz/0ea22b20f494c1cb281278eefe4f0f23f27ebd3a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/393667197_A_Hybrid_Deep_Learning_Pipeline_for_Wearable_Sensors-Based_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -720,9 +728,20 @@
 			
 				<tr><td>
 					<img src="images/Conference.png" height="15">&nbsp;&nbsp;
-					<img src="images/3.png" height="15"><img src="images/0.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/3.png" height="15"><img src="images/1.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>A Hierarchical Model for Digital Twin Enabled Human-Robot Collaboration in Industrial Assembly.</i> Xia, G., Ghrairi, Z.,  Heuermann, A., Thoben, K-D., Liu, W., Wu, Y., and Liu, H. (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
 				</td></tr>
 			
 				<tr><td>
